lab1/Test/L1-A-7-21.cmm
float oWdXPg 
;
struct w9OGfspL0VxwctgLG6o vNhNk8FWtj ( ) {
}
struct ums {
  int zkoxejtO1 [ 496248747 ] ;
};
int ;
int ;
struct VszK04 lINqmgz , Wy2BIm8UB 

;
struct kFEqwAW2_oVxI ;
struct {
};
struct WJCx5oR ;
int E2ibi ( ) {
}
int Qii ( int MiSMHIIF ) {
  while ( Y68rgWci3xqbNMbvCK1 ) {
  }
}
int ;
struct {
  int y0gdchSBBL ;
  int f60BGhb8ZkOo1 ;
  int i6i2yXg , G0wE1_ , C9WvlDiBK = TzMGHK1plvw1i 
    > zu4VIAas2tC3ut8K8dWp + - ! wZKZal0 ( KuWp9MekF8arjJPpa 
    , BZieQTUCB8qDEq = eLW23 = jw6aWWoKg = O = TNLVPU9Ofe_ 
    || B && syuTJ03ebAGnV80ik != Om4siOLrGOnF09tKw - wD1nOqX7T2wYTeo 
    * Qbj7pis5m [ sD3CXNdOnHk = yu6Yvxf58jOxp2mm5 && StEQXcm_B6mdvA 
    / ! - VXUCMsrN2connVzYgCG2 ( FnJoLwcUY4VeiOXTMHM , 
    aKMPPxmSc7kk8Y = oJEBlYUF1VwG5r <= ( Ckj1hPkY && DiqIIA6VpRn4 
    < U_tM == - iOkuB ) >= - #2128355382 ) . sol1Y12ZInKKq5IK 
    / 1238290495.556975334 / rAiko97J8Xg ( ) ] ) . QtiuZ9j22KYT9 
    ;
};
int ;
struct {
}UdD5up42 
;
int XHTsBMY7m ( ) {
  if ( vkp8Sk7uuKiRK6hQ )   if ( W9PwcL8AJCkzRmZKhmxh 
    )   ofWYvUxxZH ;
else   return RiCnK ;

else   if ( KULE3rXHj )   L2s3CVFUuO ;


}
int ;
int ;
int ;
int ;
int ;
int ;
int nL6 ( ) {
}
int tHxY1JNVaORTW ( int r68 , int emlD_Hu7UIjC_CYqZv 
  ) {
}
#